# Nalivan-

./: CMakeLists.txt  README.md  after_refactoring_ilosev.cpp  build.bat  long_number.cpp  mario.cpp
241203_multi_files/: IntMain.cpp  buildRun.bat  output.cpp  output.hpp  sorting.cpp  sorting.hpp
241216_travel/: buildRun.bat  main.cpp  menu.hpp  menu_func.cpp  menu_func.hpp  menu_item.cpp  menu_item.hpp
250522_LongNumders/: goolge_test.cpp  long_numbers.hpp
260201_marioMulti/: Game.cpp  Game.hpp  Map.hpp  Object.hpp  mario.cpp  marioAlone.cpp
260201_marioMulti/mario_OOP/: CMakeLists.txt  Game.cpp  Game.hpp  GameOver.cpp  GameOver.hpp  Map.hpp  build.bat
260222_Mario_qt/: CMakeLists.txt  README.md  build.bat
260222_Mario_qt/src/: Game.cpp  Game.hpp  GameWindow.cpp  GameWindow.hpp  Map.hpp  Object.hpp  main.cpp
calculator/: CMakeLists.txt  CalculatorApp.pro  calculatorwindow.cpp  calculatorwindow.hpp  mainwindow.cpp  mainwindow.hpp
projects/: CMakeLists.txt
task#5/: CPPcode
unit_test_example/: CMakeCache.txt
